name:                cardano-sl-core-test
version:             1.1.0
synopsis:            Cardano SL - core functionality (tests)
description:         QuickCheck Arbitrary instances for the Cardano SL core
                     functionality.
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                       Test.Pos.Core.Chrono
                       Test.Pos.Core.Arbitrary
                       Test.Pos.Core.Arbitrary.Unsafe

  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , cardano-sl-binary
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-crypto-test
                     , cardano-sl-util
                     , cardano-sl-util-test
                     , containers
                     , cryptonite
                     , data-default
                     , formatting
                     , generic-arbitrary
                     , hspec
                     , mtl
                     , quickcheck-instances
                     , random
                     , tagged
                     , time-units
                     , universum
                     , vector

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring
                       GADTs

  ghc-options:         -Wall
                       -O2